tests/reference/asr-test_pow2-0dcbd7d.stderr
style suggestion: Could have used '**' instead of 'pow'
  --> tests/errors/test_pow2.py:10:11
   |
10 |     print(pow(a, b, c, d))
   |           ^^^^^^^^^^^^^^^ '**' could be used instead

semantic error: Arguments do not match for any generic procedure, pow
  --> tests/errors/test_pow2.py:10:11
   |
10 |     print(pow(a, b, c, d))
   |           ^^^^^^^^^^^^^^^ 
